Bug 1506447 - Check overlay before checking custom scrollbar style in nsNativeThemeCocoa::GetWidgetTransparency. r=spohl, a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D12856